zero-trust-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-ingress
  namespace: prod-app

spec:
  podSelector: {}

  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-egress
  namespace: prod-app

spec:
  podSelector: {}

  policyTypes:
    - Egress
